--- a/ze/zeinterval_callbacks.cpp.erb
+++ b/ze/zeinterval_callbacks.cpp.erb
@@ -1,6 +1,7 @@
 #include "babeltrace_zeinterval.h"
 #include "zeinterval_callbacks.hpp"
 #include "xprof_utils.hpp"
+#include "babeltrace_zeinterval_event_getter_and_setter.hpp"
 #include <babeltrace2/babeltrace.h>
 
 #include <ze_api.h>
@@ -83,10 +84,11 @@ static void create_and_enqueue_host_message(const char* hostname, const process_
                                             const uint64_t ts, const uint64_t duration, const bool err) {
 
      /* Message creation */
-     bt_message *message = create_host_message(hostname, process_id, thread_id, name, ts, duration, err,
+     bt_message *message = bt_message_create_lttng_host(
                             zeinterval_iter_g->dispatch->host_event_class,
                             zeinterval_self_message_iterator_g,
-                            zeinterval_iter_g->dispatch->stream, BACKEND_ZE);
+                            zeinterval_iter_g->dispatch->stream,
+                            hostname, process_id, thread_id, ts, BACKEND_ZE, name,  duration, err);
 
      zeinterval_callbacks_state* state = (zeinterval_callbacks_state*) zeinterval_iter_g->callbacks_state;
      state->downstream_message_queue.push(message);
@@ -95,11 +97,13 @@ static void create_and_enqueue_host_message(const char* hostname, const process_
 static void create_and_enqueue_host_flow_message(const char* hostname, const process_id_t process_id, const thread_id_t thread_id, const char* name,
                                             const uint64_t ts, const uint64_t duration, const bool err, const std::set<flow_id_t> flow_ids) {
 
+     std::vector<flow_id_t> flow_ids_vec(flow_ids.begin(), flow_ids.end());
      /* Message creation */
-     bt_message *message = create_host_message(hostname, process_id, thread_id, name, ts, duration, err,
+     bt_message *message = bt_message_create_lttng_host_flow(
                             zeinterval_iter_g->dispatch->host_flow_event_class,
                             zeinterval_self_message_iterator_g,
-                            zeinterval_iter_g->dispatch->stream, BACKEND_ZE, flow_ids);
+                            zeinterval_iter_g->dispatch->stream,
+                            hostname, process_id, thread_id, ts, BACKEND_ZE, name,  duration, err, flow_ids.size(), flow_ids_vec.data());
 
      zeinterval_callbacks_state* state = (zeinterval_callbacks_state*) zeinterval_iter_g->callbacks_state;
      state->downstream_message_queue.push(message);
@@ -157,10 +161,11 @@ static void create_and_enqueue_traffic_message(const char* hostname, const proce
                                                const uint64_t size) {
 
      /* Message creation */
-     bt_message *message = create_traffic_message(hostname, process_id, thread_id, name, size,
+     bt_message *message = bt_message_create_lttng_traffic(
                                                   zeinterval_iter_g->dispatch->traffic_event_class,
                                                   zeinterval_self_message_iterator_g,
-                                                  zeinterval_iter_g->dispatch->stream, BACKEND_ZE);
+                                                  zeinterval_iter_g->dispatch->stream,
+                                                  hostname, process_id, thread_id, 0, BACKEND_ZE, name, size);
 
      zeinterval_callbacks_state* state = (zeinterval_callbacks_state*) zeinterval_iter_g->callbacks_state;
      state->downstream_message_queue.push(message);
