--- a/hip/hipinterval_callbacks.cpp.erb
+++ b/hip/hipinterval_callbacks.cpp.erb
@@ -27,7 +27,7 @@ static void create_and_enqueue_host_message(const char* hostname, const process_
      bt_message *message = create_host_message(hostname, process_id, thread_id, name, ts, duration, err,
                             hipinterval_iter_g->dispatch->host_event_class,
                             hipinterval_self_message_iterator_g,
-                            hipinterval_iter_g->dispatch->stream);
+                            hipinterval_iter_g->dispatch->stream, BACKEND_HIP);
 
      hipinterval_callbacks_state* state = (hipinterval_callbacks_state*) hipinterval_iter_g->callbacks_state;
      state->downstream_message_queue.push(message);
