--- a/opencl/clinterval_callbacks.cpp.erb
+++ b/opencl/clinterval_callbacks.cpp.erb
@@ -30,7 +30,7 @@ static void create_and_enqueue_host_message(const char* hostname, const process_
      bt_message *message = create_host_message(hostname, process_id, thread_id, name, ts, duration, err,
                                                clinterval_iter_g->dispatch->host_event_class,
                                                clinterval_self_message_iterator_g,
-                                               clinterval_iter_g->dispatch->stream);
+                                               clinterval_iter_g->dispatch->stream, BACKEND_OPENCL);
 
      clinterval_callbacks_state* state = (clinterval_callbacks_state*) clinterval_iter_g->callbacks_state;
      state->downstream_message_queue.push(message);
@@ -74,7 +74,7 @@ static void create_and_enqueue_traffic_message(const char* hostname, const proce
      bt_message *message = create_traffic_message(hostname, process_id, thread_id, name, size,
                                                   clinterval_iter_g->dispatch->traffic_event_class,
                                                   clinterval_self_message_iterator_g,
-                                                  clinterval_iter_g->dispatch->stream);
+                                                  clinterval_iter_g->dispatch->stream, BACKEND_OPENCL);
 
      clinterval_callbacks_state* state = (clinterval_callbacks_state*) clinterval_iter_g->callbacks_state;
      state->downstream_message_queue.push(message);
