Use interval to process frequency, and define new interval frequency event.

--- a/ze/zeinterval_callbacks.cpp.erb
+++ b/ze/zeinterval_callbacks.cpp.erb
@@ -78,6 +78,17 @@ void *init_zeinterval_callbacks_state() {
     return (void*) s;
 }
 
+static void create_and_enqueue_frequency_message(const char* hostname, const process_id_t process_id, const thread_id_t thread_id,
+                                                 const uintptr_t hDevice, const uint32_t domain, const uint64_t ts, const uint64_t frequency) {
+    bt_message *message = create_frequency_message(hostname, process_id, thread_id, hDevice, domain, ts, frequency,
+                           zeinterval_iter_g->dispatch->frequency_event_class,
+                           zeinterval_self_message_iterator_g,
+                           zeinterval_iter_g->dispatch->stream, BACKEND_ZE);
+
+     zeinterval_callbacks_state* state = (zeinterval_callbacks_state*) zeinterval_iter_g->callbacks_state;
+     state->downstream_message_queue.push(message);
+}
+
 static void create_and_enqueue_host_message(const char* hostname, const process_id_t process_id, const thread_id_t thread_id, const char* name,
                                             const uint64_t ts, const uint64_t duration, const bool err) {
 
@@ -243,7 +254,12 @@ static void zeinterval_<%= dbt_event.name %>_callback(
        |_ (_) (_ (_| | |  |_ \/   _|_ | | | (_)
                              /
   %>
-  <% if dbt_event.name_unsanitized.start_with?('lttng_ust_ze:')  or
+  <% if dbt_event.name_unsanitized == "lttng_ust_ze_sampling:gpu_frequency" %>
+     const hostname_t   hostname   = borrow_hostname(bt_evt);
+     const process_id_t process_id = 0;
+     const thread_id_t  thread_id = 0;
+     create_and_enqueue_frequency_message(hostname.c_str(), process_id, thread_id, (uintptr_t)hDevice, domain, timestamp, frequency);
+  <% elsif dbt_event.name_unsanitized.start_with?('lttng_ust_ze:')  or
         dbt_event.name_unsanitized.start_with?('lttng_ust_zet:') or
         dbt_event.name_unsanitized.start_with?('lttng_ust_zes:') or
         dbt_event.name_unsanitized.start_with?('lttng_ust_zel:') %>
