--- a/xprof/interval.h.erb
+++ b/xprof/interval.h.erb
@@ -57,7 +57,7 @@ struct <%= namespace %>_dispatch {
     bt_event_class *traffic_event_class;
     bt_event_class *device_name_event_class;
     bt_event_class *frequency_event_class;
-
+    bt_event_class *energy_event_class;
     /* Component's input port (weak) */
     bt_self_component_port_input *in_port;
 };
