Power and frequency Timeline

--- a/ze/zeinterval_callbacks.cpp.erb
+++ b/ze/zeinterval_callbacks.cpp.erb
@@ -21,6 +21,33 @@
 #include <set>
 #include <assert.h>     /* assert */
 
+
+std::pair<uint64_t, uint64_t> processTraceEvent(const char* host, uint64_t device, uint64_t energy, uint64_t timestamp) {
+    auto key = std::make_pair(host, device);
+
+    if (stateMap.find(key) == stateMap.end()) {
+        stateMap[key] = {energy, timestamp};
+        return std::make_pair(0, 0);  // No previous state, so no deltas
+    }
+
+    DeviceState& previousState = stateMap[key];
+    uint64_t energyDelta = energy - previousState.energy;
+    uint64_t timestampDelta = timestamp - previousState.timestamp;
+
+    previousState.energy = energy;
+    previousState.timestamp = timestamp;
+
+    return std::make_pair(energyDelta, timestampDelta);
+}
+
+
+
+
+
+
+
+
+
 //Memory interval
 static bool contains(const MemoryInterval& m, const uintptr_t val) {
     // if m empty, begin == end
@@ -77,14 +104,17 @@ void *init_zeinterval_callbacks_state() {
     zeinterval_callbacks_state *s = new zeinterval_callbacks_state;
     return (void*) s;
 }
-
+//uint64_t  power;
 static void create_and_enqueue_energy_message(const char* hostname, const process_id_t process_id, const thread_id_t thread_id,
                                                  const uintptr_t hDevice, const uint32_t domain, const uint64_t energy, const uint64_t ts) {
-    bt_message *message = create_energy_message(hostname, process_id, thread_id, hDevice, domain, energy, ts,
+        
+       std::pair<uint64_t, uint64_t> deltas = processTraceEvent(hostname, hDevice, energy, ts);
+       bt_message *message = create_energy_message(hostname, process_id,
+                           thread_id, hDevice, domain,
+                         (deltas.first == 0) ? 0 : static_cast<uint64_t>((deltas.first / static_cast<double>(deltas.second)) * 1000.0) ,ts,
                            zeinterval_iter_g->dispatch->energy_event_class,
                            zeinterval_self_message_iterator_g,
                            zeinterval_iter_g->dispatch->stream, BACKEND_ZE);
-     
      zeinterval_callbacks_state* state = (zeinterval_callbacks_state*) zeinterval_iter_g->callbacks_state;
      state->downstream_message_queue.push(message);
 }
